--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -28,6 +28,13 @@
     <version>${javaee.version}</version>
     <scope>provided</scope>
 </dependency>
+
+<!-- JTL dependency -->
+<dependency>
+	<groupId>jstl</groupId>
+	<artifactId>jstl</artifactId>
+	<version>1.2</version>
+</dependency>
   <!-- Junit Dependency -->
     <dependency>
       <groupId>junit</groupId>
